# neutxt

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
neutxt/: __init__.py  __main__.py  audio_codec.py  codec.py  demo.py  encode.py  llm_demo.py  mcp_server.py  play.py  text_codec.py  vq.py
