[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "neutxt"
version = "0.2.0"
description = "Text-based neural media encoding — video and audio as self-describing UTF-8"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "numpy>=1.24",
    "Pillow>=9.0",
    "sounddevice>=0.4",
    "zstandard>=0.20",
    "omegaconf>=2.3",
    "anthropic>=0.40",
    "encodec>=0.1",
    "mcp>=1.0",
]

[project.scripts]
neutxt = "neutxt.__main__:main"
neutxt-mcp = "neutxt.mcp_server:main"

[tool.setuptools.packages.find]
include = ["neutxt*"]
